<resources xmlns:tools="http://schemas.android.com/tools" tools:ignore="MissingTranslation,ExtraTranslation">
    <string name="app_name">见声看见</string>
    <string name="company_name">见声科技</string>
    <string name="company_web">保持联系</string>
    <string name="url">http://seeingVoice.com</string>
    <string name="company_mp">公众号：seeingVoice</string>
    <string name="complain">投诉与建议</string>
    <string name="security_center">安全中心客服</string>
    <string name="security_center_msg">请扫码安全中心微信公众号获得帮助。</string>
    <string name="user_agreement">《软件许可及服务协议》</string>
    <string name="copyright_cn">见声科技 版权所有</string>
    <string name="copyright_en1">Copyright 2018–2022 seeingVoice.</string>
    <string name="copyright_en2">ALL Rights Reserved.</string>
    <string name="privacy_policy">《隐私保护指引》</string>
    <string name="check_new_version">检查新版本</string>
    <string name="splash_enter">点击进入</string>
    <string name="skip">跳过</string>
    <string name="version_name">版本号：%1$s</string>
    <string name="intro">功能介绍</string>
    <string name="wifi">已连Wi-Fi</string>
    <string name="data_internent">使用流量</string>
    <string name="system_ready">系统就绪，点击开始</string>
    <string name="screen_brightnewss">屏幕亮</string>
    <string name="font_size">中号字体</string>
    <string name="click_to_start">点击开始</string>
    <string name="click_to_continue">点击继续</string>
    <string name="tv_click_to_stop">大家说话吧，我看着呢。</string>
    <string name="button_start">开始</string>
    <string name="button_end">结束</string>
    <string name="asr_sleeping">进入无声休眠状态\n点击按钮恢复服务</string>
    <string name="asr_back">欢迎回到见声看见\n点击按钮继续你说我看</string>
    <string name="asr_start_recording">本地系统正常\n请点击按钮开始</string>
    <string name="upgrade">见声采用40DADOW云技术确保专用通道用户流畅使用的同时，尽可能提升共享通道的体验。
        \n\n应广大用户要求，公司从6月1日起
        每个月提供30分钟-300分钟的专用通道体验券。欢迎通过如上微信公众号索取。</string>
    <string name="permission_rationale">需要麦克风权限获取说话声音、存储权限保存记录及头像。</string>
    <string name="disclaimer_content">请您务必审慎阅读、充分理解《隐私政策》和《用户协议》各条款，包括但不限于：
        \n\n系统请求麦克风录音权限，录音后进行语音识别。使用场景：1.你说-开始 2.语境-4选1-开始。系统请求存储权限，用以保存记录、设置及显示头像。您可以在“我-账号与安全-权限设置”中查看、变更、删除并管理您的授权。
        \n\n请您在使用本应用前点击<a href="http://www.baidu.com">《隐私政策》</a>和<a href="http://www.baidu.com">《用户协议》</a>了解详细信息。
        \n\n如您同意，请点击“同意”开始接受我们的服务。</string>
    <string name="disclaimer_title">用户协议和隐私政策</string>
    <string name="input_code">请输入邀请码：</string>
    <string name="code_wrong">非有效邀请码</string>
    <string name="password_rules">密码必须是6–16位的数字、字符组合(不能是纯数字)</string>
    <string name="no_space">电话、密码不能为空。</string>
    <string name="no_space2">电话、密码、昵称不能为空。</string>
    <string name="four">4</string>
    <string name="uchat">你说，我看。</string>
    <string name="global_read">已阅读并同意</string>
    <string name="disagree">不同意</string>
    <string name="global_privacy_policy">《隐私政策》</string>
    <string name="global_agreement">《用户协议》</string>
    <string name="global_and">及</string>
    <string name="global_agree">请阅读并同意隐私政策及用户协议。</string>
    <string name="tab_chats">你说</string>
    <string name="tab_contacts">语境</string>
    <string name="tab_discover">VIP</string>
    <string name="tab_me">我</string>
    <string name="str_ok">确定</string>
    <string name="str_cancel">取消</string>
    <string name="error_no_network">温馨提示: 网络不可用，请重试…</string>
    <string name="error_service_unavailable">温馨提示: 服务不可用</string>
    <string name="error_no_sound_times_exceed">温馨提示: 6s内没有检测到说话，自动断开</string>
    <string name="error_no_understand">温馨提示: 服务器无法解析这个语音</string>
    <string name="contact1">一般环境</string>
    <string name="code1">601</string>
    <string name="contact2">室内</string>
    <string name="code2">602</string>
    <string name="contact3">户外</string>
    <string name="code3">603</string>
    <string name="contact4">嘈杂</string>
    <string name="code4">604</string>
    <string name="contact5">专用通道</string>
    <string name="code5">605</string>
    <string name="contact6">声音预警</string>
    <string name="code6">606</string>
    <string name="f3_history">历史记录</string>
    <string name="f3_account_security">账号与安全</string>
    <string name="f3_dark_mode">深色模式</string>
    <string name="f3_language">多语言</string>
    <string name="f3_font_size">字体大小</string>
    <string name="f3_chat_background">聊天背景</string>
    <string name="f3_remove_account">关闭账号</string>
    <string name="enter_mobile_number">请填写手机号</string>
    <string name="enter_wechat_password">请填写听友密码</string>
    <string name="enter_verification_code">请填写验证码</string>
    <string name="next">下一步</string>
    <string name="verification_code">验证码</string>
    <string name="get_verification_code">获取验证码</string>
    <string name="country_and_area">区号</string>
    <string name="country_china">中国大陆（+86）</string>
    <string name="china_areacode">+86</string>
    <string name="login_hint_phone">你的手机号码</string>
    <string name="phone_wrong">本号码有误。请更正后继续。</string>
    <string name="login_hint_password">填写密码</string>
    <string name="login_meet_problem">登录遇到问题？</string>
    <string name="account">账号</string>
    <string name="login">登录</string>
    <string name="qq_id">QQ号</string>
    <string name="qq_password">QQ密码</string>
    <string name="email">邮箱地址</string>
    <string name="mobile_security">手机安全防护</string>
    <string name="more_security_setting">更多安全设置</string>
    <string name="login_via_mobile_number">手机号登录</string>
    <string name="use_mobile_number_to_login">用手机号登录</string>
    <string name="login_via_wechat_id_email_qq_id">听友号/QQ号/邮箱登录</string>
    <string name="use_wechat_id_email_qq_id_to_login">用听友号/QQ号/邮箱登录</string>
    <string name="login_via_password">用密码登录</string>
    <string name="login_via_sms_verification_code">用短信验证码登录</string>
    <string name="logging_in">正在登录•••</string>
    <string name="enter_your_password">密码不能为空，请输入密码</string>
    <string name="enter_your_verification_code">验证码不能为空</string>
    <string name="login_error">登录失败</string>
    <string name="registering">正在注册•••</string>
    <string name="user_exists">用户已存在</string>
    <string name="account_or_password_error">账号或密码错误，请重新填写</string>
    <string name="verification_code_error">验证码不正确，请重新输入</string>
    <string name="register">注册</string>
    <string name="register_hint">没有账号？注册一个</string>
    <string name="register_title_phone">手机号注册</string>
    <string name="nick_name">昵称</string>
    <string name="nick_name_example">例如：卧龙</string>
    <string name="password">密码</string>
    <string name="text_ack_msg">已读</string>
    <string name="text_delivered_msg">送达</string>
    <string name="back">返回</string>
    <string name="save">保存</string>
    <string name="edit">编辑</string>
    <string name="file_transfer_intro">登录听友电脑版，向我发消息，可以在手机与电脑间传输文字、图片、音频、视频 等文件。</string>
    <string name="start">开始</string>
    <string name="stop">停止</string>
    <string name="button_pushtotalk">按住说话</string>
    <string name="send">发送</string>
    <string name="sending">正在发送•••</string>
    <string name="attach_smile">表情</string>
    <string name="attach_picture">图片</string>
    <string name="attach_take_pic">拍照</string>
    <string name="attach_location">位置</string>
    <string name="attach_file">文件</string>
    <string name="attach_voice_call">语音电话</string>
    <string name="user_card">名片</string>
    <string name="release_to_cancel">松开手指，取消发送</string>
    <string name="send_fail">发送消息失败,</string>
    <string name="delete_message">删除消息</string>
    <string name="copy_message">复制消息</string>
    <string name="delete_voice">删除语音</string>
    <string name="delete_video">删除视频</string>
    <string name="delete">删除</string>
    <string name="resend">重发</string>
    <string name="confirm_resend">确认重发该信息？</string>
    <string name="connect_failuer_toast">请连网后继续</string>
    <string name="network_unavailable">网络连接不可用，请检查网络</string>
    <string name="network_time_out">网络超时，请重试</string>
    <string name="copy">复制</string>
    <string name="forward">转发</string>
    <string name="button_logout">退出登录</string>
    <string name="button_uploadlog">上传运行日志</string>
    <string name="ok">确定</string>
    <string name="cancel">取消</string>
    <string name="tips">提示</string>
    <string name="clear_records">清空记录</string>
    <string name="clear_all_records">是否清空所有聊天记录？</string>
    <string name="location_recv">[%1$s的位置]</string>
    <string name="location_message">位置信息</string>
    <string name="recording_video">录制视频</string>
    <string name="location_prefix">[我的位置]</string>
    <string name="voice">[语音]</string>
    <string name="picture">[图片]</string>
    <string name="video">[视频]</string>
    <string name="file">[文件]</string>
    <string name="voice_call">[语音通话]</string>
    <string name="button_cancel">取消</string>
    <string name="button_save">保存</string>
    <string name="button_search">查找</string>
    <string name="button_add">添加</string>
    <string name="search_header">搜</string>
    <string name="network_isnot_available">网络不可用</string>
    <string name="recoding_fail">录音失败，请重试！</string>
    <string name="select_contacts">选择联系人</string>
    <string name="confirm_forward_to">确定转发到：%1$s ?</string>
    <string name="logout">退出登录</string>
    <string name="logout_hint">退出后不会删除任何历史数据，下次登录依然可以使用本账号</string>
    <string name="exit_group_hint">退出后，将不再接收此群聊信息</string>
    <string name="dissolution_group_hint">退出后，此群将被解散</string>
    <string name="exit_group">退出</string>
    <string name="connect_conflict">同一帐号已在其他设备登录</string>
    <string name="em_user_remove">此用户已被移除</string>
    <string name="wechat_pay">支付</string>
    <string name="my_posts">相册</string>
    <string name="favorites">收藏</string>
    <string name="sticker_gallery">表情</string>
    <string name="cards_offers">卡包</string>
    <string name="settings">设置</string>
    <string name="go_setting">去设置</string>
    <string name="switch_notification">接收新消息通知</string>
    <string name="switch_sound">声音</string>
    <string name="switch_vibrate">震动</string>
    <string name="switch_speaker">使用扬声器播放语音</string>
    <string name="personal_info">个人信息</string>
    <string name="contact_info">手机通讯录匹配功能暂时关闭。点击下方按钮可更改手机号。</string>
    <string name="avatar">头像</string>
    <string name="wx_id">听友号</string>
    <string name="wechat_id">听友号：%1$s</string>
    <string name="uchat_id">听友号：</string>
    <string name="qr_code">客服二维码</string>
    <string name="scan_qr_code_and_add_friends">扫二维码图案，加微信公众号客服。</string>
    <string name="my_address">我的地址</string>
    <string name="sex">性别</string>
    <string name="region">地区</string>
    <string name="whats_up">个性签名</string>
    <string name="saving">正在保存</string>
    <string name="wx_id_or_phone">听友号/手机号</string>
    <string name="add_friends">添加朋友</string>
    <string name="chat_info">聊天信息</string>
    <string name="set_chat_to_top">置顶聊天</string>
    <string name="block_chat_msg">免打扰</string>
    <string name="clear_chat_msg">清空聊天记录</string>
    <string name="sex_male">男</string>
    <string name="sex_female">女</string>
    <string name="sex_nosay">保密</string>
    <string name="searching_for_user">正在查找联系人•••</string>
    <string name="user_not_exists">该用户不存在</string>
    <string name="connect_to_server_error">不能连接到服务器</string>
    <string name="add_to_home_screen">添加到桌面</string>
    <string name="please_wait">请稍候•••</string>
    <string name="edit_contact">设置备注和标签</string>
    <string name="contact_privacy">朋友权限</string>
    <string name="complete">完成</string>
    <string name="remark_name">备注名</string>
    <string name="add_tag">添加标签</string>
    <string name="all_tag">所有标签</string>
    <string name="sort_friend_by_tag">添加标签对联系人进行分类</string>
    <string name="phone_num">电话号码</string>
    <string name="add_phone_num">添加电话号码</string>
    <string name="description">描述</string>
    <string name="add_description">添加更多备注信息</string>
    <string name="search_friend_by_phone">来自手机号搜索</string>
    <string name="search_friend_by_wx_id">来自听友号搜索</string>
    <string name="agree">同意</string>
    <string name="edit_name">更改名字</string>
    <string name="advice_name">好名字可以让你的朋友更容易记住你。</string>
</resources>