<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/a_register"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/wechat_common_bg"
    android:clipToPadding="true"
    android:fitsSystemWindows="true"
    android:orientation="vertical"
    android:textAlignment="center"
    android:textDirection="inherit">

    <ImageView
        android:id="@+id/image_view_back"
        android:layout_width="@dimen/top_back_width"
        android:layout_height="@dimen/top_back_width"
        android:layout_alignParentStart="true"
        android:layout_centerVertical="true"
        android:layout_marginStart="12dp"
        android:layout_marginTop="12dp"
        android:onClick="back"
        android:padding="10dp"
        android:scaleType="centerInside"
        android:src="@mipmap/icon_close"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:contentDescription="@string/str_ok" />

    <!-- Nickname -->
    <TextView
        android:id="@+id/textView2"
        android:layout_width="270dp"
        android:layout_height="60dp"
        android:layout_marginStart="20dp"
        android:layout_marginTop="64dp"
        android:gravity="center_vertical"
        android:text="@string/register_title_phone"
        android:textColor="@color/common_top_title"
        android:textSize="22sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/text_view_nick_name"
        android:layout_width="70dp"
        android:layout_height="60dp"
        android:layout_alignStart="@id/et_nick_name"
        android:layout_alignParentBottom="true"
        android:layout_marginStart="20dp"
        android:gravity="center_vertical"
        android:text="@string/nick_name"
        android:textColor="#353535"
        android:textSize="@dimen/common_item_text_size"
        app:layout_constraintBottom_toTopOf="@+id/view_1"
        app:layout_constraintStart_toStartOf="parent" />

    <EditText
        android:id="@+id/et_nick_name"
        android:layout_width="0dp"
        android:layout_height="60dp"
        android:layout_alignParentBottom="true"
        android:background="@null"
        android:gravity="center_vertical"
        android:hint="@string/nick_name_example"
        android:text="@string/tab_chats"
        android:paddingStart="100dp"
        android:singleLine="true"
        android:textColorHint="@color/common_hint_grey"
        android:textSize="@dimen/common_item_text_size"
        app:layout_constraintBottom_toTopOf="@+id/view_1"
        app:layout_constraintStart_toStartOf="parent"
        android:importantForAutofill="no"
        tools:ignore="RtlSymmetry,TextFields" />

    <View
        android:id="@+id/view_1"
        android:layout_width="match_parent"
        android:layout_height="0.1dp"
        android:layout_alignParentBottom="true"
        android:layout_marginTop="60dp"
        android:background="@color/divider_grey"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView2" />

    <ImageView
        android:id="@+id/iv_avatar"
        android:layout_width="64dp"
        android:layout_height="64dp"
        android:adjustViewBounds="true"
        android:scaleType="centerCrop"
        android:visibility="visible"
        app:layout_constraintBottom_toTopOf="@+id/view_1"
        app:layout_constraintEnd_toEndOf="parent"
        tools:src="@mipmap/icon_register"
        android:contentDescription="@string/str_ok" />


    <!-- Nickname -->
    <!-- 86 -->

    <TextView
        android:id="@+id/tv_country_and_area_title"
        android:layout_width="70dp"
        android:layout_height="60dp"
        android:layout_centerVertical="true"
        android:layout_marginStart="20dp"
        android:gravity="center_vertical"
        android:text="@string/country_and_area"
        android:textColor="#353535"
        android:textSize="@dimen/common_item_text_size"
        app:layout_constraintBottom_toTopOf="@+id/edit_text_phone"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:id="@+id/textView"
        android:layout_width="wrap_content"
        android:layout_height="60dp"
        android:layout_centerVertical="true"
        android:layout_toEndOf="@id/tv_country_and_area_title"
        android:gravity="center_vertical"
        android:paddingStart="10dp"
        android:text="@string/country_china"
        android:textColor="@color/wechat_btn_green"
        android:textSize="@dimen/common_item_text_size"
        app:layout_constraintBottom_toTopOf="@+id/edit_text_phone"
        app:layout_constraintStart_toEndOf="@+id/tv_country_and_area_title"
        tools:ignore="RtlSymmetry" />

    <TextView
        android:layout_width="70dp"
        android:layout_height="60dp"
        android:layout_alignStart="@id/edit_text_phone"
        android:layout_centerVertical="true"
        android:layout_marginStart="20dp"
        android:gravity="center_vertical"
        android:text="@string/china_areacode"
        android:textColor="#353535"
        android:textSize="@dimen/common_item_text_size"
        app:layout_constraintBottom_toTopOf="@+id/view_3"
        app:layout_constraintStart_toStartOf="parent" />

    <EditText
        android:id="@+id/edit_text_phone"
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:background="@null"
        android:hint="@string/login_hint_phone"
        android:inputType="phone"
        android:paddingStart="100dp"
        android:singleLine="true"
        android:textColorHint="@color/common_hint_grey"
        android:textSize="@dimen/common_item_text_size"
        app:layout_constraintBottom_toTopOf="@+id/view_3"
        tools:layout_editor_absoluteX="0dp"
        android:autofillHints="@string/str_ok"
        tools:ignore="RtlSymmetry" />

    <View
        android:id="@+id/view_3"
        android:layout_width="match_parent"
        android:layout_height="0.1dp"
        android:layout_alignParentBottom="true"
        android:layout_marginTop="120dp"
        android:background="@color/divider_grey"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/view_1" />
    <!-- cell -->

    <!-- password -->
    <EditText
        android:id="@+id/edit_text_password"
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:layout_centerVertical="true"
        android:background="@null"
        android:hint="@string/login_hint_password"
        android:inputType="textPassword"
        android:paddingStart="100dp"
        android:singleLine="true"
        android:textColorHint="@color/common_hint_grey"
        android:textSize="@dimen/common_item_text_size"
        app:layout_constraintBottom_toTopOf="@+id/view_4"
        app:layout_constraintEnd_toEndOf="parent"
        android:autofillHints="@string/str_ok"
        tools:ignore="RtlSymmetry" />

    <TextView
        android:id="@+id/tv_password"
        android:layout_width="70dp"
        android:layout_height="60dp"
        android:layout_alignStart="@id/edit_text_password"
        android:layout_centerVertical="true"
        android:layout_marginStart="20dp"
        android:gravity="center_vertical"
        android:text="@string/password"
        android:textColor="#353535"
        android:textSize="@dimen/common_item_text_size"
        app:layout_constraintBottom_toTopOf="@+id/view_4"
        app:layout_constraintStart_toStartOf="parent" />

    <View
        android:id="@+id/view_4"
        android:layout_width="match_parent"
        android:layout_height="0.1dp"
        android:layout_alignParentBottom="true"
        android:layout_marginTop="60dp"
        android:background="@color/divider_grey"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/edit_text_phone" />
    <!-- password -->

    <ImageView
        android:id="@+id/image_view_agree"
        android:layout_width="20dp"
        android:layout_height="20dp"
        android:layout_centerHorizontal="true"
        android:layout_centerVertical="true"
        android:layout_marginStart="20dp"
        android:layout_marginBottom="16dp"
        android:background="@mipmap/icon_choose_false"
        app:layout_constraintBottom_toTopOf="@+id/btn_register"
        app:layout_constraintStart_toStartOf="parent"
        tools:ignore="ContentDescription" />

    <TextView
        android:id="@+id/text_view_agree"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginBottom="16dp"
        android:text="@string/agree"
        android:textSize="13sp"
        app:layout_constraintBottom_toTopOf="@+id/btn_register"
        app:layout_constraintStart_toEndOf="@+id/image_view_agree" />

    <TextView
        android:id="@+id/text_view_agreement"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_centerVertical="true"
        android:layout_marginBottom="16dp"
        android:text="@string/global_agreement"
        android:textColor="@color/navy_blue"
        android:textSize="13sp"
        app:layout_constraintBottom_toTopOf="@+id/btn_register"
        app:layout_constraintStart_toEndOf="@+id/text_view_agree" />

    <TextView
        android:id="@+id/text_view_and"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="16dp"
        android:text="@string/global_and"
        android:textSize="13sp"
        app:layout_constraintBottom_toTopOf="@+id/btn_register"
        app:layout_constraintStart_toEndOf="@+id/text_view_agreement" />

    <TextView
        android:id="@+id/text_view_privacy"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="16dp"
        android:text="@string/global_privacy_policy"
        android:textColor="@color/navy_blue"
        android:textSize="13sp"
        app:layout_constraintBottom_toTopOf="@+id/btn_register"
        app:layout_constraintStart_toEndOf="@+id/text_view_and" />

    <Button
        android:id="@+id/btn_register"
        android:layout_width="match_parent"
        android:layout_height="48dp"
        android:layout_marginStart="10dp"
        android:layout_marginTop="60dp"
        android:layout_marginEnd="10dp"
        android:background="@color/register_btn_bg_disable"
        android:enabled="false"
        android:paddingTop="7dp"
        android:paddingBottom="7dp"
        android:text="@string/register"
        android:textColor="@color/register_btn_text_disable"
        android:textSize="@dimen/common_item_text_size"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/view_4" />


</androidx.constraintlayout.widget.ConstraintLayout>