<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:ignore="ContentDescription,RtlSymmetry"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/wechat_common_bg"
    android:fitsSystemWindows="true"
    android:orientation="vertical">

    <RelativeLayout
        android:id="@+id/top_bar"
        android:layout_width="match_parent"
        android:layout_height="@dimen/top_bar_height"
        android:background="@color/common_top_bar">

        <ImageView
            android:id="@+id/image_view_back"
            android:layout_width="@dimen/top_back_width"
            android:layout_height="match_parent"
            android:layout_alignParentStart="true"
            android:layout_centerVertical="true"
            android:onClick="back"
            android:scaleType="centerInside"
            android:src="@drawable/btn_top_back" />
    </RelativeLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_marginTop="40dp"
        android:layout_weight="1"
        android:orientation="vertical">

        <ImageView
            android:layout_width="58dp"
            android:layout_height="58dp"
            android:layout_gravity="center"
            android:src="@mipmap/ic_launcher" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="30dp"
            android:gravity="center"
            android:text="@string/company_name"
            android:textColor="#353535"
            android:textSize="20sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/version_name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp"
            android:layout_marginBottom="30dp"
            android:gravity="center"
            android:text="@string/version_name"
            android:textColor="#353535"
            android:textSize="14sp" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:paddingStart="30dp"
            android:paddingEnd="30dp">

            <View
                android:layout_width="match_parent"
                android:layout_height="0.1dp"
                android:layout_marginStart="@dimen/setting_btn_margin_right"
                android:background="#dadada" />

            <RelativeLayout
                android:id="@+id/relative_layout_tutorial"
                android:layout_width="match_parent"
                android:layout_height="50dip"
                android:clickable="true"
                android:paddingStart="12dp"
                android:focusable="true">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_centerVertical="true"
                    android:text="@string/intro"
                    android:textColor="#353535"
                    android:textSize="16sp" />

                <ImageView
                    android:layout_width="24dp"
                    android:layout_height="24dp"
                    android:layout_alignParentEnd="true"
                    android:layout_centerVertical="true"
                    android:layout_marginEnd="8dp"
                    android:src="@mipmap/icon_right_arrow" />

                <View
                    android:layout_width="match_parent"
                    android:layout_height="0.1dp"
                    android:layout_alignParentBottom="true"
                    android:background="#dadada" />
            </RelativeLayout>

            <RelativeLayout
                android:id="@+id/relative_layout_complain"
                android:layout_width="match_parent"
                android:layout_height="50dip"
                android:clickable="true"
                android:paddingStart="12dp"
                android:focusable="true">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_centerVertical="true"
                    android:text="@string/complain"
                    android:textColor="#353535"
                    android:textSize="16sp" />

                <ImageView
                    android:layout_width="24dp"
                    android:layout_height="24dp"
                    android:layout_alignParentEnd="true"
                    android:layout_centerVertical="true"
                    android:layout_marginEnd="8dp"
                    android:src="@mipmap/icon_right_arrow" />

                <View
                    android:layout_width="match_parent"
                    android:layout_height="0.1dp"
                    android:layout_alignParentBottom="true"
                    android:background="#dadada" />
            </RelativeLayout>

            <RelativeLayout
                android:id="@+id/relative_layout_web"
                android:layout_width="match_parent"
                android:layout_height="50dip"
                android:clickable="true"
                android:paddingStart="12dp"
                android:focusable="true">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_centerVertical="true"
                    android:text="@string/company_web"
                    android:textColor="#353535"
                    android:textSize="16sp" />

                <ImageView
                    android:layout_width="24dp"
                    android:layout_height="24dp"
                    android:layout_alignParentEnd="true"
                    android:layout_centerVertical="true"
                    android:layout_marginEnd="8dp"
                    android:src="@mipmap/icon_right_arrow" />
            </RelativeLayout>

            <View
                android:layout_width="match_parent"
                android:layout_height="0.1dp"
                android:layout_marginStart="@dimen/setting_btn_margin_right"
                android:background="#dadada" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_gravity="bottom|center"
            android:gravity="bottom|center"
            android:orientation="vertical"
            android:paddingBottom="20sp">

            <TextView
                android:id="@+id/text_view_user_agreement"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:text="@string/user_agreement"
                android:textColor="@color/navy_blue"
                android:textSize="12sp" />

            <TextView
                android:id="@+id/text_view_privacy_policy"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:text="@string/privacy_policy"
                android:textColor="@color/navy_blue"
                android:textSize="12sp" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:text="@string/copyright_cn"
                android:textColor="@color/tips_grey"
                android:textSize="12sp" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:text="@string/copyright_en1"
                android:textColor="@color/tips_grey"
                android:textSize="12sp" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:text="@string/copyright_en2"
                android:textColor="@color/tips_grey"
                android:textSize="12sp" />
        </LinearLayout>
    </LinearLayout>
</LinearLayout>