<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/a_change_name"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/wechat_common_bg"
    android:clipToPadding="true"
    android:fitsSystemWindows="true"
    android:orientation="vertical">

    <RelativeLayout
        android:id="@+id/top_bar"
        android:layout_width="match_parent"
        android:layout_height="@dimen/top_bar_height">

        <ImageView
            android:id="@+id/image_view_back"
            android:layout_width="@dimen/top_back_width"
            android:layout_height="match_parent"
            android:layout_alignParentStart="true"
            android:layout_centerVertical="true"
            android:onClick="back"
            android:scaleType="centerInside"
            android:src="@drawable/btn_top_back"
            android:contentDescription="@string/company_name" />

        <TextView
            android:id="@+id/text_view_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:layout_toStartOf="@+id/tv_save"
            android:layout_toEndOf="@id/image_view_back"
            android:text="@string/edit_name"
            android:textColor="@color/common_top_title"
            android:textSize="16sp" />

        <TextView
            android:id="@+id/tv_save"
            android:layout_width="@dimen/save_btn_width"
            android:layout_height="@dimen/save_btn_height"
            android:layout_alignParentEnd="true"
            android:layout_centerVertical="true"
            android:layout_marginEnd="@dimen/save_btn_margin_right"
            android:background="@drawable/bg_save_btn"
            android:enabled="false"
            android:gravity="center"
            android:text="@string/save"
            android:textColor="@color/btn_text_default_color"
            android:textSize="@dimen/save_btn_text_size" />
    </RelativeLayout>

    <EditText
        android:id="@+id/edit_text_region"
        android:layout_width="match_parent"
        android:layout_height="36dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="20dp"
        android:layout_marginEnd="16dp"
        android:background="@null"
        android:paddingStart="1dp"
        android:singleLine="true"
        android:textColor="#353535"
        android:textSize="16sp" />

    <View
        android:id="@+id/v_nick"
        android:layout_width="match_parent"
        android:layout_height="0.1dp"
        android:layout_alignParentBottom="true"
        android:layout_marginStart="12dp"
        android:layout_marginEnd="12dp"
        android:background="@color/divider_grey" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:layout_marginTop="12dp"
        android:layout_marginEnd="20dp"
        android:text="@string/advice_name"
        android:textColor="#C2C2C2"
        android:textSize="14sp" />

</LinearLayout>